--- a/deploy/buildspec.yml
+++ b/deploy/buildspec.yml
@@ -9,6 +9,7 @@ phases:
   pre_build:
     on-failure: ABORT
     commands:
+      - date
       - aws --version
       - aws ecr get-login-password | docker login --username AWS --password-stdin "$ECR_REPOSITORY_URL"
       - COMMIT_HASH=${CODEBUILD_RESOLVED_SOURCE_VERSION:0:7}
